routing added for forgot password with docs
