# src/users/user.validations.js
@@ -19,10 +19,7 @@ export const emailSchemas = Joi.object({
 	email: Joi.string().email().required()
 });
 
-export const otpSchema = Joi.object({
-	otp: Joi.number().max(MAX_NUM).required()
-});
-
-export const passwordSchema = Joi.object({
-	password: Joi.string().required()
+export const validatePassword = Joi.object({
+	password: Joi.string().required(),
+	otp: Joi.number().required()
 });
